@@ -1,5 +1,8 @@
 2006-03-27  Jb Evain  <jbevain@gmail.com>
 
+	* Mono.Cecil.Metadata/MetadataToken.cs:
+		Override GetHashCode as we override Equals.
+
 	* Mono.Cecil/TableComparers.cs:
 		Fix the ordering of generic parameters.
 		This revision roundtrips C5. Yeah! 
